feat: Add library download, tiling module, bug fixes, and scaffold improvements
- Add individual and bulk STL download from library page
- Add scaffold save-to-library with auth token support
- Fix TPMS inversion crash (Gyroid/Schwarz P non-manifold guard)
- Fix STL export buttons permanently disabled
- Fix library page crash from scaffold_type/type field mismatch
- Add tiling module (sphere, ellipsoid, torus, cylinder, superellipsoid surfaces)
- Add scaffold cache shared module
- Add primitives subpackage (geometric, organic, architectural, CSG, transforms)
- Add vascular perfusion dish rim_height and flip_upside_down parameters
- Update scaffold type selector and parameter metadata
- Add TilingPanel frontend component and store

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ pydantic-settings>=2.1.0
 manifold3d>=2.3.0
 numpy>=1.24.0
 scikit-image>=0.21.0
+Pillow>=10.0.0
 anthropic>=0.18.0
 python-dotenv>=1.0.0
 
@@ -18,3 +19,6 @@ PyJWT>=2.8.0
 
 # Optional LLM providers
 openai>=1.0.0
+
+# Optional production dependencies
+redis>=5.0.0  # For production rate limiting across multiple instances
